--- a/client.html
+++ b/client.html
@@ -1,108 +1,192 @@
 <html>
 <head>
 <!--
-  Web-based client. Partially functioning but CORs causes many issues ; UI needs work 
+  Web-based client. Partially functioning but CORs causes many issues ; UI needs work
 -->
 <script>
-  window.addEventListener('load', function() {
-    var iframe = document.getElementById('page_frame');
-    var url = document.getElementById('url');
+  var iframe;
+  var url;
+  var quit_status = 0;
+  var downloadTimer;
+  var iframe_connected = false;
 
-    var quit_status = 0;
-    var downloadTimer;
+  function sleep(ms) {
+    console.log(ms);
+    var timeleft = ms/1000;
+    console.log("timeleft " + timeleft);
+    downloadTimer = setInterval(function(){
+      if(quit_status == 1) {
+        clearInterval(downloadTimer);
+      }
+      timeleft--;
+      document.getElementById("countdowntimer").textContent = timeleft;
+      if(timeleft <= 0) {
+          clearInterval(downloadTimer);
+          random_news();
+      }
+    },1000);
+    return new Promise(resolve => setTimeout(resolve, ms));
+  }
+  function text_truncate(str, length, ending) {
+    if (length == null) {
+      length = 100;
+    }
+    if (ending == null) {
+      ending = '...';
+    }
+    if (str.length > length) {
+      return str.substring(0, length - ending.length) + ending;
+    } else {
+      return str;
+    }
+  };
 
-    function sleep(ms) {
-      console.log(ms);
-      if (ms!=10) {
-        var timeleft = ms/1000;
-        console.log("timeleft " + timeleft);
-        downloadTimer = setInterval(function(){
-          if(quit_status == 1) {
-            clearInterval(downloadTimer);
+  async function random_news(sleep_seconds) {
+    const Http = new XMLHttpRequest();
+    const rand_article_url='http://localhost:3000/random_article?type=random';
+    Http.open("GET", rand_article_url);
+    Http.send();
+    iframe_connected = false;
+    Http.onreadystatechange=(e)=>{
+      console.log(Http.responseText)
+      url.textContent = text_truncate(Http.responseText, 80);
+      try { iframe.src = Http.responseText; } catch(e) { console.log(e) }
+      try { window.document.domain = Http.responseText; } catch(e) { console.log(e) }
+      //iframe.src ='http://localhost:3000/proxy?url=' + Http.responseText;
+      try {
+        iframe.onload = function(e) {
+          try {
+            if (iframe.document) {
+              iframe.document.domain = Http.responseText;
+            }
           }
-          timeleft--;
-          document.getElementById("countdowntimer").textContent = timeleft;
-          if(timeleft <= 0)
-              clearInterval(downloadTimer);
-        },1000);
+          catch(e) { console.log(e); }
+
+          iframe_connected = true;
+           try{
+              (iframe.contentWindow||iframe.contentDocument).location.href;
+              iframe_connected = false; // Expecting a CORs object thus ^ results in errror and this line doesn't execute
+              // If no CORs object iframe_connected = false will execute
+           }
+           catch(err){
+              //err:SecurityError: Blocked a frame with origin "http://*********" from accessing a cross-origin frame.
+              console.log('err:'+err);
+              if(!iframe_connected) {
+                console.log("IFrame not connected.. SOMETHING WENT WRONG THIS SHOULDN'T HAPPEN");
+              }
+              else {
+                console.log("Iframe connected... Yay");
+              }
+          }
+          if(!iframe_connected) {
+            console.log("IFrame not connected.. Selecting next article");
+            next_article();
+          }
+        };
       }
-      return new Promise(resolve => setTimeout(resolve, ms));
-    }
-
-    async function random_news(sleep_seconds) {
-      await sleep(sleep_seconds || 120000);
-      const Http = new XMLHttpRequest();
-    	const url='http://localhost:3000/random_article?type=random';
-    	Http.open("GET", url);
-    	Http.send();
-    	Http.onreadystatechange=(e)=>{
-    		console.log(Http.responseText)
-        url.textContent = Http.responseText;
-        //iframe.src ='http://localhost:3000/proxy?url=' + Http.responseText;
-        iframe.src = Http.responseText;
-        iframe.document.domain = Http.responseText;
-        window.document.domain = Http.responseText;
-    	}
-    }
-
-    function next_article() {
-      random_news(10);
-    }
-    function quit_on() {
-      quit_status = 1;
-    }
-    function quit_off() {
-      quit_status = 0;
-      clearInterval(downloadTimer);
-    }
-    function resume() {
-      quit_off();
-      next();
-    }
-    function parse_keyevents(e) {
-      if(e.keyCode == 32) { //space
-        next_article();
-       }
-      if(e.keyCode == 81) { //q pauses execution
-        quit_on()
+      catch(e) {
+        console.log("Caught error while setting iframe " + e);
       }
-      if(e.keyCode == 67) { //c continues execution
-        resume()
-      }
+
+
+
+      //inject_iframe_js();
+
     }
-    window.addEventListener("keyup", function(e) {
-      parse_keyevents(e)
-    });
+    await sleep(sleep_seconds || 120000);
+  }
 
-    iframe.addEventListener("load", function() {
-      random_news();
-    });
+  // inject_iframe_js
+  // atttempt to apply key bindings to iframe
+  // TODO: provide iframe specific functions that account for the iframe context
+  function inject_iframe_js() {
+    iframe.window.next_article = next_article();
+    iframe.window.quit_on = quit_on();
+    iframe.window.parse_keyevents = parse_keyevents();
+    iframe.window.init_listeners = function(){
+      window.addEventListener("keyup", function(e) {
+        parse_keyevents(e)
+      });
+    }
+    iframe.window.eval = "init_listeners();";
+  }
 
-    iframe.addEventListener("keyup", function(e) {
-      parse_keyevents(e)
-    });
+  function next_article() {
+    quit_off();
+    random_news();
+  }
+  function quit_on() {
+    quit_status = 1;
+  }
+  function quit_off() {
+    quit_status = 0;
+    clearInterval(downloadTimer);
+  }
 
-    random_news(10);
+  function parse_keyevents(e) {
+    if(e.keyCode == 32) { //space
+      next_article();
+     }
+    if(e.keyCode == 81) { //q pauses execution
+      quit_on()
+    }
+  }
+  window.addEventListener('load', function() {
+    iframe = document.getElementById('page_frame');
+    url = document.getElementById('url');
+
+    random_news();
+  });
+
+  window.addEventListener("keyup", function(e) {
+    parse_keyevents(e)
+  });
+
+  iframe.addEventListener("keyup", function(e) {
+    parse_keyevents(e)
   });
 </script>
 
 <style>
+
+#attribution {
+  float: right;
+  text-align: right;
+  font-size: .7em;
+}
+#controls {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+#countdowntimer_wrap {
+  border-right: 3px solid black;
+
+  float: left;
+  font-weight: bold;
+  padding-right: 10px;
+}
 #url {
   color: green;
+  background: black;
+  width: 100px;
+  padding: 5px;
 }
 #page_frame {
   width: 100%;
   height: 100%;
   overflow:scroll;
+  border: none;
 }
 .header {
+  padding-top: 2px;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 24px;
+  height: 30px;
   z-index: 10;
   background: grey;
+  opacity: 0.97;
 
 }
 
@@ -120,10 +204,15 @@
 </head>
 <body>
 <div class="header">
-    <button id="next" onclick="next_article()">[next]</button> spacebar
-    <button id="stop" onclick="quit_on()">[stop]</button> q
-    <button id="continue" onclick="resume()">[continue]</button> c
-    <span id="url"></span><span id="countdowntimer">120 </span> Seconds left
+  <span id="controls">
+    <a id="next" href="javascript:next_article()">next</a> [spacebar]
+    <a id="stop" href="javascript:quit_on()">stop countdown</a> [q]
+    </span>
+    <span id="url"></span><span id="countdowntimer_wrap"><span id="countdowntimer">120 </span> Seconds left</span>
+    <div id = "attribution">
+      <span id="powered_by_newsapi">powered by <a href="https://newsapi.org">NewsAPI.org</a></span><br/>
+      <span id="github">source code <a href="https://github.com/joeystevens00/random_news_viewer/">Github</a></span>
+    </div>
 </div>
 <div class="page__content-container">
 <iframe id="page_frame" src="https://www.google.com" sandbox="allow-same-origin allow-scripts allow-forms" >
